Full mock up of landing page. Created Home.html and Home.css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html>
 	<head>
 		<title>Portfolio_Site</title>
-		<link rel="stylesheet" type="text/css" href="style.css"
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		
+		<div id="layer">
+		<header>
+			<!-- Portfolio Header -->
+		</header>
+		<div id="content">
+			<h1>Hello</h1>
+		</div>
+		<div id="enter_button">
+			<a href="home.html">Enter</a>
+		</div>
+		<!-- <footer>
+			<p>footer</p>
+		</footer> -->
+		</div>
 	</body>
 </html>
