Added home page with nav, header and icon.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>Hello</h1>
 		</div>
 		<div id="enter_button">
-			<a href="home.html">Enter</a>
+			<a href="Home.html">Enter</a>
 		</div>
 		<!-- <footer>
 			<p>footer</p>
