center the iframes

--- a/home.html
+++ b/home.html
@@ -18,7 +18,13 @@
 			</nav>
 		</header>
 		<div id="content">
-			<p>My Work</p>
+			<!-- <p>My Work</p> -->
+			<div id="frames">
+				<iframe class="1" src="#"></iframe>
+				<iframe class="2" src="#"></iframe>
+				<iframe class="1" src="#"></iframe>
+				<iframe class="2" src="#"></iframe>
+			</div>
 		</div>
 		<footer>
 			<p>footer</p>
