removed footer visual, added link back to landing page.

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="layer">
 		<header>
-			<img src="Images/elephant_on_a_bike.png">
+			<a href="index.html"><img src="Images/elephant_on_a_bike.png"></a>
 			<!-- Portfolio Header -->
 			<nav>
 				<ul>
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 		<footer>
-			<p>footer</p>
+			<!-- <p>footer</p> -->
 		</footer>	
 	</div>
 
