tweaked layout added social media bar and adjusted navbar

--- a/home.html
+++ b/home.html
@@ -8,7 +8,18 @@
 	<div id="layer">
 		<header>
 			<a href="index.html"><img src="Images/elephant_on_a_bike.png"></a>
+
 			<!-- Portfolio Header -->
+			<div id="social_media">
+				<ul>
+					<li><a href="#"><img src="sm_icons/Facebook.png"></a></li>
+					<li><a href="#"><img src="sm_icons/Instagram.png"></a></li>
+					<li><a href="#"><img src="sm_icons/Twitter.png"></a></li>
+					<li><a href="#"><img src="sm_icons/GooglePlus.png"></a></li>
+					<li><a href="#"><img src="sm_icons/Github.png"></a></li>
+					<li><a href="#"><img src="sm_icons/Linkedin.png"></a></li>
+				</ul>
+			</div>
 			<nav>
 				<ul>
 					<li><a href="#">Contact</a></li>
@@ -18,17 +29,19 @@
 			</nav>
 		</header>
 		<div id="content">
-			<!-- <p>My Work</p> -->
+			
 			<div id="frames">
-				<iframe class="1" src="#"></iframe>
-				<iframe class="2" src="#"></iframe>
-				<iframe class="1" src="#"></iframe>
-				<iframe class="2" src="#"></iframe>
+				<img class="1" src="Images/Firenze.jpg">
+				<img class="2" src="Images/NewYork.jpg">
+				<img class="1" src="Images/taiwan.jpg">
+				<img class="2" src="Images/longbeach.jpg">
+				<img class="1" src="Images/Paris.jpg">
+				<img class="1" src="Images/washington.jpg">
 			</div>
 		</div>
 		<footer>
-			<!-- <p>footer</p> -->
-		</footer>	
+		<!-- img -->
+		</footer>
 	</div>
 
 </body>
