Added about page, made header ffixed

--- a/home.html
+++ b/home.html
@@ -23,14 +23,26 @@
 			<nav>
 				<ul>
 					<li><a href="#">Contact</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="home.html">Home</a></li>
 				</ul>
 			</nav>
 		</header>
 		<div id="content">
 			
 			<div id="frames">
+				<img class="1" src="Images/Firenze.jpg">
+				<img class="2" src="Images/NewYork.jpg">
+				<img class="1" src="Images/taiwan.jpg">
+				<img class="2" src="Images/longbeach.jpg">
+				<img class="1" src="Images/Paris.jpg">
+				<img class="1" src="Images/washington.jpg">
+				<img class="1" src="Images/Firenze.jpg">
+				<img class="2" src="Images/NewYork.jpg">
+				<img class="1" src="Images/taiwan.jpg">
+				<img class="2" src="Images/longbeach.jpg">
+				<img class="1" src="Images/Paris.jpg">
+				<img class="1" src="Images/washington.jpg">
 				<img class="1" src="Images/Firenze.jpg">
 				<img class="2" src="Images/NewYork.jpg">
 				<img class="1" src="Images/taiwan.jpg">
