--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="#">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="home.html">Home</a></li>
 					</ul>
