Finished Contact page (non-functional)

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,13 @@
 			<!-- ############# Form ################### -->
 			<div id="form">
 				<form>
-					First Name:<br><input type="text" name="firstname">
+					<input type="text" name="firstname" value="First Name">
+					<br>
+					<input type="text" name="email" value="Email">
+					<br>
+					<input id="message" type="text" name="message"value="Message">
+					<br>
+					<input id="submit" type="submit" value="Submit">
 					
 				</form>
 			</div>	
