adjusted social media bar background

--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
 						<li><a href="home.html">Home</a></li>
 					</ul>
 				</nav>
+				<div id="header_layer">
+				</div>
 			</header>
 			<div id="content">
 				<p>
