--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,8 @@
 						<li><a href="home.html">Home</a></li>
 					</ul>
 				</nav>
+				<div id="header_layer">
+				</div>
 			</header>
 			<!-- ############# Form ################### -->
 			<div id="form">
