--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 <body>
 	<div id="layer">
 		<header>
+			
 			<a href="index.html"><img src="Images/elephant_on_a_bike.png"></a>
 
 			<!-- Portfolio Header -->
@@ -27,6 +28,8 @@
 					<li><a href="home.html">Home</a></li>
 				</ul>
 			</nav>
+			<div id="header_layer">
+			</div>
 		</header>
 		<div id="content">
 			
