--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Portfolio Site</title>
 			<link rel="stylesheet" type="text/css" href="contact.css">
+			
 	</head>
 	<body>
 		<div id="layer">
@@ -39,10 +40,11 @@
 					<br>
 					<input id="message" type="text" name="message"value="Message">
 					<br>
-					<input id="submit" type="submit" value="Submit">
+					<input id="submit" type="submit" onclick="submit()" value="Submit">
 					
 				</form>
 			</div>	
 		</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="contact.js"></script>
 	</body>
 </html>
