--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 			<!-- Portfolio Header -->
 		</header>
 		<div id="content">
-			<h1>Hello</h1>
+			<h1 id="hello">Hello</h1>
 		</div>
 		<div id="enter_button">
-			<a href="Home.html">Enter</a>
+			<a id="enter" href="Home.html">Enter</a>
 		</div>
 		<!-- <footer>
 			<p>footer</p>
 		</footer> -->
 		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="contact.js"></script>
 	</body>
 </html>
