--- a/home.html
+++ b/home.html
@@ -34,29 +34,30 @@
 		<div id="content_gallery">
 			
 			<div id="gallery_frames">
-				<img class="1" src="Images/Firenze.jpg">
-				<img class="2" src="Images/NewYork.jpg">
-				<img class="1" src="Images/taiwan.jpg">
-				<img class="2" src="Images/longbeach.jpg">
-				<img class="1" src="Images/Paris.jpg">
-				<img class="1" src="Images/washington.jpg">
-				<img class="1" src="Images/Firenze.jpg">
-				<img class="2" src="Images/NewYork.jpg">
-				<img class="1" src="Images/taiwan.jpg">
-				<img class="2" src="Images/longbeach.jpg">
-				<img class="1" src="Images/Paris.jpg">
-				<img class="1" src="Images/washington.jpg">
-				<img class="1" src="Images/Firenze.jpg">
-				<img class="2" src="Images/NewYork.jpg">
-				<img class="1" src="Images/taiwan.jpg">
-				<img class="2" src="Images/longbeach.jpg">
-				<img class="1" src="Images/Paris.jpg">
-				<img class="1" src="Images/washington.jpg">
+				<img class="image" src="Images/Firenze.jpg">
+				<img class="image" src="Images/NewYork.jpg">
+				<img class="image" src="Images/taiwan.jpg">
+				<img class="image" src="Images/longbeach.jpg">
+				<img class="image" src="Images/Paris.jpg">
+				<img class="image" src="Images/washington.jpg">
+				<img class="image" src="Images/Firenze.jpg">
+				<img class="image" src="Images/NewYork.jpg">
+				<img class="image" src="Images/taiwan.jpg">
+				<img class="image" src="Images/longbeach.jpg">
+				<img class="image" src="Images/Paris.jpg">
+				<img class="image" src="Images/washington.jpg">
+				<img class="image" src="Images/Firenze.jpg">
+				<img class="image" src="Images/NewYork.jpg">
+				<img class="image" src="Images/taiwan.jpg">
+				<img class="image" src="Images/longbeach.jpg">
+				<img class="image" src="Images/Paris.jpg">
+				<img class="image" src="Images/washington.jpg">
 			</div>
 		</div>
 		<footer id="image_footer">
 		<!-- img -->
 		</footer>
 	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="script.js"></script>
 </body>
 </html>
