--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<h1 id="hello">Hello</h1>
 			</div>
 			<div id="enter_button">
-				<a id="enter" href="Home.html">Enter</a>
+				<a id="enter" href="home.html">Enter</a>
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="script.js"></script>
