added a shitload of high res images added basic lightbox without navigation on click of thumbnails

--- a/home.html
+++ b/home.html
@@ -31,27 +31,32 @@
 			<div id="header_layer">
 			</div>
 		</header>
+		<div id="outer_lightbox">
+			<div id="inner_lightbox">
+				<img id="lb_image" src="">
+			</div>
+		</div>
 		<div id="content_gallery">
 			
 			<div id="gallery_frames">
-				<img class="image" src="Images/Firenze.jpg">
-				<img class="image" src="Images/NewYork.jpg">
-				<img class="image" src="Images/taiwan.jpg">
-				<img class="image" src="Images/longbeach.jpg">
-				<img class="image" src="Images/Paris.jpg">
-				<img class="image" src="Images/washington.jpg">
-				<img class="image" src="Images/Firenze.jpg">
-				<img class="image" src="Images/NewYork.jpg">
-				<img class="image" src="Images/taiwan.jpg">
-				<img class="image" src="Images/longbeach.jpg">
-				<img class="image" src="Images/Paris.jpg">
-				<img class="image" src="Images/washington.jpg">
-				<img class="image" src="Images/Firenze.jpg">
-				<img class="image" src="Images/NewYork.jpg">
-				<img class="image" src="Images/taiwan.jpg">
-				<img class="image" src="Images/longbeach.jpg">
-				<img class="image" src="Images/Paris.jpg">
-				<img class="image" src="Images/washington.jpg">
+				<img class="image" alt="Images/hi_res/Firenze.jpg" src="Images/Firenze.jpg">
+				<img class="image" alt="Images/hi_res/NewYork.jpg" src="Images/NewYork.jpg">
+				<img class="image" alt="Images/hi_res/taiwan.jpg" src="Images/taiwan.jpg">
+				<img class="image" alt="Images/hi_res/longbeach.jpg" src="Images/longbeach.jpg">
+				<img class="image" alt="Images/hi_res/Paris.jpg" src="Images/Paris.jpg">
+				<img class="image" alt="Images/hi_res/washington.jpg" src="Images/washington.jpg">
+				<img class="image" alt="Images/hi_res/Day_Night.jpg" src="Images/Day_Night.jpg">
+				<img class="image" alt="Images/hi_res/NewYork2.jpg" src="Images/NewYork2.jpg">
+				<img class="image" alt="Images/hi_res/taiwan2.jpg" src="Images/taiwan2.jpg">
+				<img class="image" alt="Images/hi_res/Roma.jpg" src="Images/Roma.jpg">
+				<img class="image" alt="Images/hi_res/Venezia.jpg" src="Images/Venezia.jpg">
+				<img class="image" alt="Images/hi_res/taiwan3.jpg" src="Images/taiwan3.jpg">
+				<img class="image" alt="Images/hi_res/Firenze.jpg" src="Images/Firenze.jpg">
+				<img class="image" alt="Images/hi_res/NewYork.jpg" src="Images/NewYork.jpg">
+				<img class="image" alt="Images/hi_res/taiwan.jpg" src="Images/taiwan.jpg">
+				<img class="image" alt="Images/hi_res/longbeach.jpg" src="Images/longbeach.jpg">
+				<img class="image" alt="Images/hi_res/Paris.jpg" src="Images/Paris.jpg">
+				<img class="image" alt="Images/hi_res/washington.jpg" src="Images/washington.jpg">
 			</div>
 		</div>
 		<footer id="image_footer">
