added fuctional navigation to lightbox.

--- a/home.html
+++ b/home.html
@@ -33,7 +33,9 @@
 		</header>
 		<div id="outer_lightbox">
 			<div id="inner_lightbox">
+				<p id="b_arrow"><</p>	
 				<img id="lb_image" src="">
+				<p id="f_arrow">></p>
 			</div>
 		</div>
 		<div id="content_gallery">
