added keyboard navigation to lightbox

--- a/home.html
+++ b/home.html
@@ -33,9 +33,10 @@
 		</header>
 		<div id="outer_lightbox">
 			<div id="inner_lightbox">
-				<p id="b_arrow"><</p>	
+				<a href="#"><p id="b_arrow"><</p></a>	
 				<img id="lb_image" src="">
-				<p id="f_arrow">></p>
+				<a href="#"><p id="f_arrow">></p></a>
+				<a href="#"><p id="close_lightbox">X</p></a>
 			</div>
 		</div>
 		<div id="content_gallery">
